# netts

./: .gitignore  .markdownlint.json  .mdl.rb  .pre-commit-config.yaml  .pylintrc  .python-lint  404.html  LICENSE  README.md  add_to_graphs.py  analyse_graphs.py  cc_measures_vs_nodes_genpub.ipynb  cluster_graph_measures.py  compile_all_graph_data.py  compile_all_graph_data_avg.py  compile_graphs_dataset.py  config.toml  contractions.py  describe_graphs.py  extract_entities.py  extract_entities_tutorial.py  filelists.py  first_steps.py  first_steps_corenlp.py  first_steps_openie5.py  first_steps_stanza.py  graph_analysis_functions.py  graph_oasis.sh  graph_tats.sh  graph_truth.sh  index.html  junk.py  junk.sh  lemma.py  motif_analysis.R  motif_helper_functions.py  motifs.py  motifs_pca.ipynb  motifs_pca.py  motifs_pca_oasis.ipynb  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: build-docs.yml  check_downloads.yml  docs.yml  fast-unit-tests.yml  mdl.yml  pre-commit.yml  publish-to-pypi.yml  slow-unit-tests.yml  test-cache.yaml  unit-tests.yml
cli/: index.html
cli_basics/: index.html
configuration/: index.html
debugging/: test_openie_server.py  test_stanza_server.py
demo_data/: 3138838-TAT10.txt  3138838-TAT13.txt  3138838-TAT30.txt  3138849-TAT10.txt
docs/: mkdocs.yml
docs/docs/: basic_usage.md  cli.md  cli_basics.md  configuration.md  index.md  install.md  pipeline.md  post-processing.md  python_basics.md  references.bib
examples/: postprocess.py  process_transcript.py
install/: index.html
legacy/: add_to_graphs.py  compile_all_graph_data_avg.py  compile_graphs_dataset.py  draw_example.py  extract_entities.py  first_steps.py  first_steps_corenlp.py  first_steps_stanza.py  fixed_issues.txt  graph_analysis_functions.py  motif_analysis.ipynb  motif_analysis.py  motif_helper_functions.py  motifs.py  motifs_pca_oasis.ipynb  netspy.code-workspace  oasis_results_updated.ipynb  send_mail_from_terminal_with_postfix.sh  setup_stanfordnlp.py  setup_stanza.py  speech_graph.py  stats.R  tool_demo.sh  visualise_entities.py  visualise_example.py  visualise_openie5.py  visualise_paragraph_functions.py  visualise_sentence.py  wordembed.py
netspy/: __init__.py  clients.py  config.py  config_file.py  context_manager.py  filelists.py  install_models.py  logger.py  nlp_helper_functions.py  preprocess.py  speech_graph.py  types.py  visualise_paragraph_functions.py
netspy/cli/: __init__.py  app.py  config.py  util.py
netspy/preprocess/: __init__.py  preprocess.py
netts/: __init__.py  analyze.py  clients.py  config.py  config_file.py  contractions.py  install_models.py  logger.py  nlp_helper_functions.py  speech_graph.py  version.py  visualise_paragraph_functions.py
netts/cli/: app.py
netts/preprocess/: __init__.py  defaults.py  preprocess.py
pipeline/: index.html
post-processing/: index.html
python_basics/: index.html
search/: search_index.json
tests/: conftest.py  context_manager.py  test_cli.py  test_clients.py  test_config.py  test_install_models.py  test_netspy.py  test_nlp_helper_functions.py  test_openie.py  test_preprocess.py  test_speech_graph.py  test_visualise_paragraph_functions.py  variables_test.py
tests/test_data/: 3138838-TAT10.pickle  3138838-TAT13.pickle  3138838-TAT30.pickle  3138849-TAT10.pickle
