[tool.poetry]
name = "netspy"
version = "0.1.0"
description = "Toolbox for constructing semantic speech networks from speech transcripts.n"
authors = ["Caroline Nettekoven <crn29@cam.ac.uk>", "Sarah Morgan <sem91@cam.ac.uk>", "Oscar Terence Giles <ogiles@turing.ac.uk>", "Helen Duncan <hduncan@turing.ac.uk>"]
license = "MIT"
repository = "https://github.com/alan-turing-institute/netspy"
readme = "README.md"

[tool.poetry.scripts]
netspy =  "netspy.cli:app"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pyopenie = "^0.2.0"
stanza = "^1.2.3"
networkx = "^2.6.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
nltk = "^3.6.2"
pandas = "^1.3.2"
typer = {extras = ["all"], version = "^0.3.2"}
pydantic = "^1.8.2"
requests = "^2.26.0"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
safety = "^1.10.3"
flake8 = "^3.9.2"
pylint = "^2.9.6"
mypy = "^0.910"
pytest = "^6.2.4"
pre-commit = "^2.14.0"
pytest-cov = "^2.12.1"
mkdocs-material = "^7.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
