[tool.poetry]
name = "netspy"
version = "0.1.0"
description = "Toolbox for constructing semantic speech networks from speech transcripts.n"
authors = [
    "Caroline Nettekoven <crn29@cam.ac.uk>",
    "Sarah Morgan <sem91@cam.ac.uk>",
    "Oscar Terence Giles <ogiles@turing.ac.uk>",
    "Helen Duncan <hduncan@turing.ac.uk>",
    "Iain Stenson <istenson@turing.ac.uk>",
]
license = "MIT"
repository = "https://github.com/alan-turing-institute/netspy"
readme = "README.md"

[tool.poetry.scripts]
netspy =  "netspy.cli:app"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pyopenie = "^0.2.0"
stanza = "^1.2.3"
networkx = "^2.6.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
nltk = "^3.6.2"
pandas = "^1.3.2"
typer = {extras = ["all"], version = "^0.3.2"}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
requests = "^2.26.0"
tqdm = "^4.62.2"
rtoml = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
safety = "^1.10.3"
flake8 = "^3.9.2"
pylint = "^2.9.6"
mypy = "^0.910"
pytest = "^6.2.4"
pre-commit = "^2.14.0"
pytest-cov = "^2.12.1"
mkdocs-material = "^7.2.4"
pytest-mock = "^3.6.1"
mkdocs-click = "^0.4.0"
devtools = {extras = ["pygments"], version = "^0.8.0"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "without_cache: marks tests to run that require no netspy dependencies cached (deselect with '-m \"not without_cache\"')",
    "ci_only: marks tests that should only run on ci (deselect with '-m \"not ci_only\"')",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
