[tool.poetry]
name = "netts"
version = "0.3.1"
description = "Toolbox for constructing NETworks of Transcript Semantics."
authors = [
    "Caroline Nettekoven <crn29@cantab.ac.uk>",
    "Sarah Morgan <sem91@cam.ac.uk>",
    "Oscar Terence Giles <ogiles@turing.ac.uk>",
    "Helen Duncan <hduncan@turing.ac.uk>",
    "Iain Stenson <istenson@turing.ac.uk>",
]
license = "GPL-3.0-or-later3"
documentation = "https://alan-turing-institute.github.io/netts/"
repository = "https://github.com/alan-turing-institute/netts"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["NLP", "networks", "transcribed speech", "semantic content", "graph theory"]

[tool.poetry.scripts]
netts =  "netts.cli:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyopenie = "^0.2.0"
stanza = "^1.2.3"
networkx = "^2.6.2"
matplotlib = "^3.4.3"
numpy = "^1.22.2"
nltk = "^3.6.2"
pandas = "^1.3.2"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
requests = "^2.26.0"
tqdm = "^4.62.2"
rtoml = "^0.7.0"
typer = {version = "^0.4.1", extras = ["all"]}
gdown = "^4.6.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
safety = "^1.10.3"
flake8 = "^3.9.2"
pylint = "^2.9.6"
mypy = "^0.910"
pytest = "^6.2.4"
pre-commit = "^2.14.0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
devtools = {extras = ["pygments"], version = "^0.8.0"}
black = "^22.3.0"
mkdocs-click = "^0.7.0"
mkdocs-material = "^8.2.13"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "without_cache: marks tests to run that require no netts dependencies cached (deselect with '-m \"not without_cache\"')",
    "ci_only: marks tests that should only run on ci (deselect with '-m \"not ci_only\"')",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
